<resources>
    <string name="app_name">RememberIA</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_crear">Crear</string>
    <string name="nav_plantillas">Plantillas</string>
    <string name="nav_ajustes">Ajustes</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings_title">Ajustes</string>
    <string name="settings_sonido">Sonido</string>
    <string name="settings_sonido_desc">Suave</string>
    <string name="settings_vibracion">Vibración</string>
    <string name="settings_modo_oscuro">Modo oscuro</string>
    <string name="settings_notificaciones">Notificaciones</string>
    <string name="settings_formato_hora">Formato de hora</string>
    <string name="settings_formato_hora_12">12 horas</string>
    <string name="settings_formato_hora_24">24 horas</string>
    <string name="settings_version">Versión</string>
    <string name="settings_version_value">Alarmas App v1.0.0</string>
    <string name="create_mode_title">Crear (modos)</string>
    <string name="create_mode_subtitle">Elige cómo crear:</string>
    <string name="create_mode_button">Continuar</string>
    <string name="create_mode_quick">Crear rápido</string>
    <string name="create_mode_quick_desc">Nombre, hora y repetición</string>
    <string name="create_mode_series">Serie / Rutina</string>
    <string name="create_mode_series_desc">Multiples pasos encadenados</string>
    <string name="create_mode_voice">Por voz</string>
    <string name="create_mode_voice_desc">Dicta tu alarma con el micrófono</string>
    <string name="create_mode_location">Por ubicación</string>
    <string name="create_mode_location_desc">Se activa al llegar a un lugar</string>
    <string name="settings_ok">Ok</string>
    <string name="create_alarm_title">Crear alarma</string>
    <string name="create_alarm_section_name">Nombre</string>
    <string name="create_alarm_section_time">Hora</string>
    <string name="create_alarm_section_repeat">Repeticion</string>
    <string name="create_alarm_section_category">Categoria</string>
    <string name="create_alarm_section_state">Estado</string>
    <string name="create_alarm_repeat_daily">Diario</string>
    <string name="create_alarm_repeat_weekdays">L-V</string>
    <string name="create_alarm_repeat_sat">Sab</string>
    <string name="create_alarm_category_health">Salud</string>
    <string name="create_alarm_category_home">Hogar</string>
    <string name="create_alarm_category_study">Estudio</string>
    <string name="create_alarm_reminder">Recordatorio</string>
    <string name="create_alarm_button">Crear</string>
    <string name="create_alarm_name_hint">Purificar agua</string>
    <string name="create_alarm_time_hint">7:30 pm</string>
    <string name="create_alarm_more_category">Más categorías (próximamente)</string>
    <string name="series_title">Serie (Rutina)</string>
    <string name="series_routine_name">Rutina mañana</string>
    <string name="series_frequency_lv">L-V</string>
    <string name="series_frequency_time">6:30 am</string>
    <string name="series_state_on">Estado: ON</string>
    <string name="series_section_steps">Pasos (ordenados)</string>
    <string name="series_step_wake">Despertar</string>
    <string name="series_step_water">Agua</string>
    <string name="series_step_stretch">Estiramiento</string>
    <string name="series_section_preview">Vista previa (próximos 3 disparos)</string>
    <string name="series_preview_lun">Lun 6:30 am</string>
    <string name="series_preview_mar">Mar 6:30 am</string>
    <string name="series_preview_mie">Mie 6:30 am</string>
    <string name="series_button_save">Guardar serie</string>
    <string name="series_step_time_1">6:30</string>
    <string name="series_step_time_2">6:35</string>
    <string name="series_step_time_3">6:45</string>
    <string name="location_title">Por ubicación</string>
    <string name="location_enable_label">Activar por ubicación</string>
    <string name="location_enable_on">ON</string>
    <string name="location_enable_off">OFF</string>
    <string name="location_section_preview">Vista previa de ubicación</string>
    <string name="location_map_placeholder">Mapa</string>
    <string name="location_section_when">Cuando llegue a</string>
    <string name="location_place_home">Casa</string>
    <string name="location_place_work">Trabajo</string>
    <string name="location_section_linked">Alarma vinculada</string>
    <string name="location_linked_alarm">Purificar agua / 7:30 pm / ON</string>
    <string name="location_section_message">Mensaje</string>
    <string name="location_message_text">\"Se activará al detectar llegada a casa\"</string>
    <string name="location_section_state">Estado</string>
    <string name="location_state_detected">Ubicación detectada: Casa</string>
    <string name="location_state_permissions">Permisos GPS: OK</string>
    <string name="location_button_save">Guardar</string>
    <string name="voice_title">Por voz</string>
    <string name="voice_tap_to_speak">Toca para hablar</string>
    <string name="voice_listening">Escuchando…</string>
    <string name="voice_processing">Procesando…</string>
    <string name="voice_section_transcription">Transcripcion</string>
    <string name="voice_transcription_text">\"Recuérdame purificar agua al llegar a casa\"</string>
    <string name="voice_section_detected">Detectado</string>
    <string name="voice_action">Accion: Purificar agua</string>
    <string name="voice_condition">Condicion: Llegar a casa</string>
    <string name="voice_cancel">Cancelar</string>
    <string name="voice_confirm">Confirmar</string>
    <string name="voice_error">No te entendi</string>
    <string name="voice_retry">Reintentar</string>
    <string name="plantillas_title">Plantillas</string>
    <string name="plantillas_section_label">Listas para usar</string>
    <string name="ringing_title">Sonando ahora</string>
    <string name="ringing_alarm_name">Purificar agua</string>
    <string name="ringing_section_details">Detalles</string>
    <string name="ringing_location">Estás en: Casa</string>
    <string name="ringing_time">Hora: 7:30 pm</string>
    <string name="ringing_elapsed">Sonando: 00:42</string>
    <string name="ringing_chip_sound">Sonido: Suave</string>
    <string name="ringing_chip_vibration">Vibración: ON</string>
    <string name="ringing_section_actions">Acciones</string>
    <string name="ringing_button_done">Hecho</string>
    <string name="ringing_button_snooze">Posponer</string>
    <string name="ringing_button_reschedule">Reprogramar</string>
    <string name="ringing_tip">Tip: si pospones, se mantiene la repetición para mañana.</string>
    <string name="execute_title">Ejecutar alarma</string>
    <string name="execute_status">Marcado como Hecho / Guardado OK</string>
    <string name="execute_section_snooze">Posponer (elige intérvalo)</string>
    <string name="execute_snooze_5">5 min</string>
    <string name="execute_snooze_10">10 min</string>
    <string name="execute_snooze_30">30 min</string>
    <string name="execute_section_reschedule">Reprogramar</string>
    <string name="execute_new_time_label">Hora nueva</string>
    <string name="execute_new_time_value">8:15 pm</string>
    <string name="execute_keep_repeat">¿Mantener repetición para mañana?</string>
    <string name="execute_save">Guardar cambios</string>
    <string name="home_title">Alarmas</string>
    <string name="home_search_hint">Buscar alarma…</string>
    <string name="home_search_button">Buscar</string>
    <string name="home_filter_button">Filtrar</string>
    <string name="home_section_today">HOY</string>
    <string name="home_section_inactive">Inactiva</string>
</resources>